--- a/index.html
+++ b/index.html
@@ -9,21 +9,27 @@
     <link href="https://fonts.googleapis.com/css?family=Monoton" rel="stylesheet">
     <title>Exceptional Realty Group - Luxury Homes - About</title>
   </head>
-  
+
   <body>
     <H1>Exceptional</H1>
     <H2>Realty Group</H2>
-    
+
     <a href="index.html">About</a> <a href="new-properties.html">New Properties</a> <a href="real-estate-listings.html">Listings</a> <a href="market-report.html">Market Report</a> <a href="contact.html">Contact</a> <a href="http://hud.gov" target='_blank'>H.U.D.</a>
-    
+
     <img src="images/intro-pic.jpg" alt="a beatiful living room" title="Welcome to Exceptional Realty">
-  
+
     <p> Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
     </p>
     <p>
       Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
     </p>
-   
+
+    <video controls>
+      <source src="real-estate.mp4" type="video/mp4">
+      <sorce src="real-estate.ogv" type=video/ogg>
+      <p>Your browser does not support HTML5 video. <a href="https://browsehappy.com/" target="_blank">Please upgrade your browser</a></p>
+    </video>
+
   </body>
 
 
