--- a/contact.html
+++ b/contact.html
@@ -7,6 +7,9 @@
    <meta name="author" content="Joaquin Herrera">
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://fonts.googleapis.com/css?family=Monoton" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.0/normalize.min.css">
+    <script scr="https://cdnjs.cloudflare.com/ajax/libs/modernizr/2.8.3/modernizr.min.js"></script>
+    <link rel="stylesheet" href="css/style.css">
     <title>Exceptional Realty Group - Luxury Homes - Contact</title>
  </head>
 
