--- a/index.html
+++ b/index.html
@@ -8,14 +8,22 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://fonts.googleapis.com/css?family=Monoton" rel="stylesheet">
     <title>Exceptional Realty Group - Luxury Homes - About</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.0/normalize.min.css">
+    <script scr="https://cdnjs.cloudflare.com/ajax/libs/modernizr/2.8.3/modernizr.min.js"></script>
+    <link rel="stylesheet" href="css/style.css">
   </head>
 
   <body>
     <header>
-      <H1>Exceptional</H1>
-      <H2>Realty Group</H2>
-
-      <a href="index.html">About</a> <a href="new-properties.html">New Properties</a> <a href="real-estate-listings.html">Listings</a> <a href="market-report.html">Market Report</a> <a href="contact.html">Contact</a> <a href="http://hud.gov" target='_blank'>H.U.D.</a>
+      <div id="logo">
+        <H1>Exceptional</H1>
+        <H2>Realty Group</H2>
+      </div>
+      <nav>
+        <a href="index.html">About</a> <a href="new-properties.html">New Properties</a>
+        <a href="real-estate-listings.html">Listings</a> <a href="market-report.html">Market Report</a>
+        <a href="contact.html">Contact</a> <a href="http://hud.gov" target='_blank'>H.U.D.</a>    
+      </nav>
     </header>
 
     <section id="featured-property">
@@ -25,10 +33,17 @@
       </figure>
     </section>
 
+    <section>
       <p> Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
       </p>
+    </section>
+
+    <h2 class="milk-text">Featured Listings</h2>
+    <section>
       <p>Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
       </p>
+    </section>
+
 
     <section id="promotional">
       <figure>
