--- a/real-estate-listings.html
+++ b/real-estate-listings.html
@@ -1,19 +1,22 @@
 <!DOCTYPE html>
 <html lang="en">
- <head>
-   <meta charset="UTF-8">
-   <meta name="description" content="Exceptional Realty Group, your real estate agent for buying, selling, and renting throughout New York City">
-   <meta name="keywords" content="Exceptional Realty Group, real estate, houses, property">
-   <meta name="author" content="Joaquin Herrera">
-   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8">
+    <meta name="description" content="Exceptional Realty Group, your real estate agent for buying, selling, and renting throughout New York City">
+    <meta name="keywords" content="Exceptional Realty Group, real estate, houses, property">
+    <meta name="author" content="Joaquin Herrera">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.0/normalize.min.css">
+    <script scr="https://cdnjs.cloudflare.com/ajax/libs/modernizr/2.8.3/modernizr.min.js"></script>
+    <link rel="stylesheet" href="css/style.css">
     <link href="https://fonts.googleapis.com/css?family=Monoton" rel="stylesheet">
     <title>Exceptional Realty Group - Luxury Homes - Listings</title>
- </head>  
-  
+  </head>
+
   <body>
     <H1>Exceptional</H1>
     <H2>Realty Group</H2>
-     
+
      <a href="index.html">About</a> <a href="new-properties.html">New Properties</a> <a href="real-estate-listings.html">Listings</a> <a href="market-report.html">Market Report</a> <a href="contact.html">Contact</a> <a href="http://hud.gov" target='_blank'>H.U.D.</a>
      <H3>Listings</H3>
   </body>
