--- a/index.html
+++ b/index.html
@@ -15,15 +15,17 @@
 
   <body>
     <header>
-      <div id="logo">
-        <H1>Exceptional</H1>
-        <H2>Realty Group</H2>
-      </div>
-      <nav>
-        <a href="index.html">About</a> <a href="new-properties.html">New Properties</a>
-        <a href="real-estate-listings.html">Listings</a> <a href="market-report.html">Market Report</a>
-        <a href="contact.html">Contact</a> <a href="http://hud.gov" target='_blank'>H.U.D.</a>    
-      </nav>
+      <div class="wrapper">
+        <div id="logo">
+          <H1>Exceptional</H1>
+          <H2>Realty Group</H2>
+        </div>
+        <nav>
+          <a href="index.html">About</a> <a href="new-properties.html">New Properties</a>
+          <a href="real-estate-listings.html">Listings</a> <a href="market-report.html">Market Report</a>
+          <a href="contact.html">Contact</a> <a href="http://hud.gov" target='_blank'>H.U.D.</a>
+        </nav>
+      </div> <!-- clossing the wrapper -->
     </header>
 
     <section id="featured-property">
@@ -33,9 +35,19 @@
       </figure>
     </section>
 
+    <section id="news">
+      <h3>Company News</h3>
+        <p> Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
+        dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex
+        ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat
+       nulla pariatur.</p>
+    </section>
+
     <section>
-      <p> Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
-      </p>
+      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
+      dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex
+      ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat
+     nulla pariatur.</p>
     </section>
 
     <h2 class="milk-text">Featured Listings</h2>
